--- a/main.ui
+++ b/main.ui
@@ -22,8 +22,8 @@ QFrame {
 	border-radius : 5px;
 	border-style: solid;
 	border-width: 1px;
-	border-color: black;
-	background-color : rgb(240, 240, 240);
+	border-color: lightgray;
+	background-color : rgb(250, 250, 250);
 }
 
 QTextEdit {
@@ -39,7 +39,7 @@ QPushButton {
 	border-radius : 5px;
 	border-style: solid;
 	border-width: 1px;
-	border-color: black;
+	border-color: lightgray;
 	background-color : white;
 	text-align: center;
 }
@@ -48,7 +48,7 @@ QPushButton:pressed {
 	border-radius : 3px;
 	border-style: solid;
 	border-width: 1px;
-	border-color: black;
+	border-color: lightgray;
     background-color: rgb(180, 180, 180);
 }
 
@@ -56,7 +56,7 @@ QPushButton:hover {
 	border-radius : 3px;
 	border-style: solid;
 	border-width: 1px;
-	border-color: black;
+	border-color: lightgray;
     background-color: rgb(210, 210, 210);
 }
 
@@ -72,7 +72,7 @@ Line {
 
 QSpinBox {
 	border-radius : 5px;
-	border: 1px solid black;
+	border: 1px solid lightgray;
 	background-color : white; 
 	color : black;
 	padding-left : 15px;
@@ -119,7 +119,7 @@ border-image: url(:/icons/arrow-left-pressed.png);
 
 QComboBox {
 	border-radius : 5px;
-	border : 1px solid black;
+	border : 1px solid lightgray;
 	background-color : white;
 	color : black;
 	padding-right : 20px;
@@ -144,7 +144,7 @@ QComboBox QAbstractItemView {
 	color : black;
     background-color : white;
 	border-radius : 5px;
-	border : 1px solid black;
+	border : 1px solid lightgray;
 	outline : 0px;
 	selection-background-color: black;
 }
@@ -156,7 +156,7 @@ QComboBox QAbstractItemView QScrollBar:vertical {
 
 QComboBox QAbstractItemView QScrollBar::handle:vertical {
   background-color: white;
-  border : 3px solid black;
+  border : 3px solid lightgray;
   border-radius : 5px;
   color: black;
   max-width : 5px;
@@ -184,7 +184,7 @@ QComboBox QAbstractItemView QScrollBar::sub-line:vertical {
 
 QProgressBar {
 	color: white;
-     border: 1px solid black;
+     border: 1px solid lightgray;
      border-radius: 5px;
  }
 
@@ -195,7 +195,7 @@ QProgressBar {
 
 QLineEdit {
 	border-radius: 5px;
-	border: 1px solid black;
+	border: 1px solid lightgray;
 }
 
 </string>
@@ -320,7 +320,7 @@ QLineEdit {
                 <x>150</x>
                 <y>90</y>
                 <width>81</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="layoutDirection">
@@ -384,7 +384,7 @@ QLineEdit {
                 <x>150</x>
                 <y>125</y>
                 <width>81</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -421,7 +421,7 @@ QLineEdit {
                 <x>150</x>
                 <y>160</y>
                 <width>81</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -477,11 +477,9 @@ QLineEdit {
               </property>
               <property name="styleSheet">
                <string notr="true">QFrame {
-	border-radius : 5px;
-	border-bottom-left-radius : 0px;
-	border-bottom-right-radius : 0px;
-	background-color : black;
-	color : white;
+	border-radius : 0px;
+	background-color : lightgray;
+	color : black;
 }</string>
               </property>
               <property name="frameShape">
@@ -547,11 +545,9 @@ QLineEdit {
               </property>
               <property name="styleSheet">
                <string notr="true">QFrame {
-	border-radius : 5px;
-	border-bottom-left-radius : 0px;
-	border-bottom-right-radius : 0px;
-	background-color : black;
-	color : white;
+	border-radius : 0px;
+	background-color : lightgray;
+	color : black;
 }</string>
               </property>
               <property name="frameShape">
@@ -632,7 +628,7 @@ QCheckBox::indicator:checked:pressed {
                 <x>145</x>
                 <y>75</y>
                 <width>81</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -681,7 +677,7 @@ QCheckBox::indicator:checked:pressed {
                 <x>145</x>
                 <y>40</y>
                 <width>81</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -770,11 +766,9 @@ QCheckBox::indicator:checked:pressed {
                 </property>
                 <property name="styleSheet">
                  <string notr="true">QFrame {
-	border-radius : 5px;
-	border-bottom-left-radius : 0px;
-	border-bottom-right-radius : 0px;
-	background-color : black;
-	color : white;
+	border-radius : 0px;
+	background-color : lightgray;
+	color : black;
 }</string>
                 </property>
                 <property name="frameShape">
@@ -963,13 +957,13 @@ QCheckBox::indicator:checked:pressed {
             <property name="minimumSize">
              <size>
               <width>800</width>
-              <height>150</height>
+              <height>145</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>1000</width>
-              <height>150</height>
+              <height>145</height>
              </size>
             </property>
             <property name="frameShape">
@@ -998,12 +992,12 @@ QCheckBox::indicator:checked:pressed {
                  <property name="minimumSize">
                   <size>
                    <width>70</width>
-                   <height>0</height>
+                   <height>130</height>
                   </size>
                  </property>
                  <property name="maximumSize">
                   <size>
-                   <width>60</width>
+                   <width>130</width>
                    <height>16777215</height>
                   </size>
                  </property>
@@ -1157,7 +1151,7 @@ QPushButton::pressed{
                 <x>140</x>
                 <y>40</y>
                 <width>91</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -1192,7 +1186,7 @@ QPushButton::pressed{
                 <x>140</x>
                 <y>75</y>
                 <width>91</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -1242,11 +1236,9 @@ QPushButton::pressed{
               </property>
               <property name="styleSheet">
                <string notr="true">QFrame {
-	border-radius : 5px;
-	border-bottom-left-radius : 0px;
-	border-bottom-right-radius : 0px;
-	background-color : black;
-	color : white;
+	border-radius : 0px;
+	background-color : lightgray;
+	color : black;
 }</string>
               </property>
               <property name="frameShape">
@@ -1298,7 +1290,7 @@ QPushButton::pressed{
                 <x>140</x>
                 <y>80</y>
                 <width>91</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -1338,7 +1330,7 @@ QPushButton::pressed{
                 <x>140</x>
                 <y>115</y>
                 <width>91</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="frame">
@@ -1378,7 +1370,7 @@ QPushButton::pressed{
                 <x>140</x>
                 <y>150</y>
                 <width>91</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="styleSheet">
@@ -1427,11 +1419,9 @@ QPushButton::pressed{
               </property>
               <property name="styleSheet">
                <string notr="true">QFrame {
-	border-radius : 5px;
-	border-bottom-left-radius : 0px;
-	border-bottom-right-radius : 0px;
-	background-color : black;
-	color : white;
+	border-radius : 0px;
+	background-color : lightgray;
+	color : black;
 }</string>
               </property>
               <property name="frameShape">
@@ -1582,7 +1572,7 @@ QPushButton::pressed{
                 <x>140</x>
                 <y>160</y>
                 <width>91</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -1619,7 +1609,7 @@ QPushButton::pressed{
                 <x>140</x>
                 <y>200</y>
                 <width>91</width>
-                <height>24</height>
+                <height>22</height>
                </rect>
               </property>
               <property name="alignment">
@@ -1640,11 +1630,9 @@ QPushButton::pressed{
               </property>
               <property name="styleSheet">
                <string notr="true">QFrame {
-	border-radius : 5px;
-	border-bottom-left-radius : 0px;
-	border-bottom-right-radius : 0px;
-	background-color : black;
-	color : white;
+	border-radius : 0px;
+	background-color : lightgray;
+	color : black;
 }</string>
               </property>
               <property name="frameShape">
@@ -1704,11 +1692,9 @@ QPushButton::pressed{
               </property>
               <property name="styleSheet">
                <string notr="true">QFrame {
-	border-radius : 5px;
-	border-bottom-left-radius : 0px;
-	border-bottom-right-radius : 0px;
-	background-color : black;
-	color : white;
+	border-radius : 0px;
+	background-color : lightgray;
+	color : black;
 }</string>
               </property>
               <property name="frameShape">
@@ -1820,11 +1806,9 @@ QPushButton::pressed{
               </property>
               <property name="styleSheet">
                <string notr="true">QFrame {
-	border-radius : 5px;
-	border-bottom-left-radius : 0px;
-	border-bottom-right-radius : 0px;
-	background-color : black;
-	color : white;
+	border-radius : 0px;
+	background-color : lightgray;
+	color : black;
 }</string>
               </property>
               <property name="frameShape">
